# xacc

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci-mac.yml
docs/source/: extensions.rst
python/: py_optimizer.cpp  py_optimizer.hpp
python/compiler/: CMakeLists.txt  pyxasm_listener.cpp
python/examples/: .nah_vqe_ucc1.py.swp  adapt-vqe_h2.py  print  test_scipy.py  uccsd_pyscf.py
python/plugins/: CMakeLists.txt
python/plugins/observables/: psi4_observable.py  pyscf_observable.py
python/plugins/optimizers/: scipy_optimizer.py
python/tests/: azure_testing.py
quantum/: CMakeLists.txt
quantum/examples/: CMakeLists.txt
quantum/examples/base_api/: CMakeLists.txt  h2_adapt_vqe.cpp  mc_vqe_example.cpp
quantum/examples/hpc_virtualization/: tnqvm_hpc_virtualization.cpp
quantum/examples/pds_vqs/: CMakeLists.txt  adapt_pds_vqs.in.cpp  adapt_vqe.in.cpp  h4_linear.txt  h4_square.txt  pds_vqs.in.cpp
quantum/examples/qasm/: 422_code.cpp  CMakeLists.txt
quantum/observable/fermion/: FermionOperator.cpp  FermionOperator.g4  FermionOperator.hpp
quantum/observable/fermion/tests/: FermionOperatorTester.cpp
quantum/observable/pauli/: CMakeLists.txt  PauliOperator.cpp  PauliOperator.g4  PauliOperator.hpp  PauliOperatorParser.hpp
quantum/observable/transforms/: CMakeLists.txt  ObservableTransformsActivator.cpp
quantum/observable/transforms/BravyiKitaev/: BK.cpp  BK.hpp  Fenwick.hpp
quantum/observable/transforms/tests/: BKTester.cpp
quantum/plugins/: CMakeLists.txt
quantum/plugins/algorithms/: CMakeLists.txt
quantum/plugins/algorithms/adapt/: adapt.cpp  adapt.hpp
quantum/plugins/algorithms/adapt_vqe/: CMakeLists.txt  adapt_vqe.cpp  adapt_vqe.hpp  adapt_vqe_activator.cpp  manifest.json
quantum/plugins/algorithms/gradient_strategies/: CMakeLists.txt  GradientStrategyActivator.cpp  ParameterShiftGradient.hpp  manifest.json
quantum/plugins/algorithms/mc-vqe/: mc-vqe.cpp  mc-vqe.hpp  mc_vqe_response.cpp
quantum/plugins/algorithms/qcmx/: CMakeLists.txt  QCMXActivator.cpp  adapt_pds_vqs.cpp  adapt_pds_vqs.hpp  pds_vqs.cpp  pds_vqs.hpp  qcmx.cpp
quantum/plugins/algorithms/qeom/: qeom.cpp  qeom.hpp
quantum/plugins/algorithms/vqe/: vqe.cpp
quantum/plugins/atos_qlm/: CMakeLists.txt
quantum/plugins/azure_quantum/: CMakeLists.txt  azure_quantum.cpp  azure_quantum.hpp  azure_utils.cpp  azure_utils.hpp  manifest.json
quantum/plugins/azure_quantum/tests/: AzureQuantumAcceleratorTester.cpp  CMakeLists.txt
quantum/plugins/circuits/: CMakeLists.txt
quantum/plugins/circuits/exp/: exp.cpp
quantum/plugins/circuits/uccsd/: uccsd.cpp
quantum/plugins/decorators/: CMakeLists.txt
quantum/plugins/ibm/: CMakeLists.txt  IBMActivator.cpp
quantum/plugins/ibm/aer/cuda/: CMakeLists.txt  aer_custatevec.cu  aer_custatevec.hpp
quantum/plugins/observable_groupings/: CMakeLists.txt
quantum/plugins/optimizers/: CMakeLists.txt
quantum/plugins/placement/: CMakeLists.txt
quantum/plugins/quantinuum/: CMakeLists.txt  manifest.json  quantinuum.cpp  quantinuum.hpp
quantum/python/: xacc-quantum-py.cpp
xacc/: CMakeLists.txt  xacc.cpp
xacc/accelerator/: AcceleratorBufferDecorator.hpp
xacc/algorithm/: AlgorithmGradientStrategy.hpp
xacc/ir/: CompositeInstruction.hpp  Observable.hpp  ObservableGrouping.hpp
xacc/optimizer/: CMakeLists.txt  Optimizer.hpp
xacc/optimizer/jacobi/: CMakeLists.txt  jacobi_activator.cpp  jacobi_optimizer.cpp  jacobi_optimizer.hpp  manifest.json
xacc/optimizer/nlopt-optimizers/: CMakeLists.txt
(+47 files in other folders)
